@@ -1,3 +1,8 @@
+2008-09-25  Tomas Mraz <t8m@centrum.cz>
+
+	* modules/pam_tally/pam_tally.c(get_tally): Fix syslog message.
+	(tally_check): Open faillog read only. Close file descriptor.
+
 2008-08-29  Thorsten Kukuk  <kukuk@thkukuk.de>
 
 	* release version 1.0.2
